@@ -41,6 +41,26 @@ Config:
     The password to use for HTTP authentication against the ElasticSearch host.
     Defaults to "" (i. e. no authentication).
 
+.. versionadded:: 0.9
+
+- use_buffering: (bool, optional):
+    Buffer records to a disk-backed buffer on the Heka server before writing them to ElasticSearch.
+    Defaults to true.
+- queue_max_buffer_size (uint64, optional):
+    Defines maximum queue buffer size, in bytes. Defaults to 0, which means no
+    max.
+- queue_full_action (string, optional):
+    Specifies how Heka should behave when the queue reaches the specified
+    maximum capacity. There are currently three possible actions:
+
+        - `shutdown` - Shuts down Heka.
+        - `drop` - New messages are dropped until queue is available again.
+          Already queued messages are unaffected.
+        - `block` - Blocks processing of messages, tries to push last message
+          until its possible.
+
+    Defaults to `shutdown`.
+
 Example:
 
 .. code-block:: ini
@@ -51,3 +71,4 @@ Example:
     flush_interval = 5000
     flush_count = 10
     encoder = "ESJsonEncoder"
+
