@@ -67,6 +67,8 @@ Features
 * LogstreamerInput now uses first two "magic" bytes to identify gzip files
   instead of relying on `.gz` suffix.
 
+* Added on-disk buffering to ElasticSearchOutput. It is enabled by default.
+
 0.8.3 (2015-01-08)
 ==================
 
